@@ -1,5 +1,5 @@
 //
-//  DrawableLabel.cs
+//  FPSCounter.cs
 //
 //  Author:
 //       The Parasithe <bipbip500@hotmail.com>
@@ -19,73 +19,75 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
+using Microsoft.Xna.Framework;
 using Microsoft.Xna.Framework.Content;
 using Microsoft.Xna.Framework.Graphics;
-using Microsoft.Xna.Framework;
 
 namespace GREATClient
 {
-    public class DrawableLabel : Drawable
+    public class FPSCounter : DrawableLabel
     {
 		/// <summary>
-		/// Gets or sets the name of the font.
+		/// ThE NUMBER OF UPDATE BY SECOND
 		/// </summary>
-		/// <value>The name of the font.</value>
-		string FontName { get; set; }
+		const int UPDATE_BY_SECOND = 2;
 
 		/// <summary>
-		/// Gets or sets the font.
+		/// Gets or sets the since start.
 		/// </summary>
-		/// <value>The font.</value>
-		protected SpriteFont Font { get; set; }
+		/// <value>The since start.</value>
+		TimeSpan SinceStart { get; set; }
 
 		/// <summary>
-		/// Gets or sets the text.
+		/// Gets or sets the last draw.
 		/// </summary>
-		/// <value>The text.</value>
-		public String Text { get; set; }
+		/// <value>The last draw.</value>
+		TimeSpan LastDraw { get; set; }
 
 		/// <summary>
-		/// Gets or sets the update.
+		/// Gets or sets the last time the fps was updated
 		/// </summary>
-		/// <value>The update.</value>
-		Action<DrawableLabel> UpdateAction { get; set; }
-	
+		/// <value>The last display.</value>
+		TimeSpan LastUpdate { get; set; }
 
-        public DrawableLabel(string fontName, Action<DrawableLabel> update = null) : base()
+
+		public FPSCounter() : base(UIConstants.UI_FONT)
         {
-			FontName = fontName;
-			UpdateAction = update;
-			Text = "";
+			SinceStart = new TimeSpan();
+			LastDraw = new TimeSpan();
+			LastUpdate = new TimeSpan();
         }
 
-		/// <summary>
-		/// Loads the image of the object.
-		/// </summary>
-		/// <param name="content">Content.</param>
-		protected override void OnLoad(ContentManager content, GraphicsDevice gd)
-		{
-			if (content != null && gd != null) {
-				Font = content.Load<SpriteFont>(FontName);
-				IsLoaded = true;
-			}
-		}
-
-		protected override void OnDraw(SpriteBatch batch)
-		{
-			batch.Begin();
-
-			Vector2 FontOrigin = Font.MeasureString( Text ) / 2;
-			// Draw the string
-			batch.DrawString( Font, Text, GetAbsolutePosition(), Tint * Alpha, 
-			                 Orientation, OriginRelative * Font.MeasureString(Text), Scale, Effects, 0 );
-
-			batch.End();
+		protected override void OnLoad(ContentManager content, GraphicsDevice gd) {
+			if (gd != null)
+				Position = new Vector2(10, gd.Viewport.TitleSafeArea.Height * 19 / 20);
+			base.OnLoad(content, gd);
 		}
 
 		protected override void OnUpdate(GameTime dt)
 		{
-			UpdateAction(this);
+			SinceStart = SinceStart.Add(dt.ElapsedGameTime);
+			LastUpdate = LastUpdate.Add(dt.ElapsedGameTime);
+		}
+
+		protected override void OnDraw(SpriteBatch batch)
+		{
+			if( LastUpdate.TotalMilliseconds > 1000 / UPDATE_BY_SECOND)
+			{
+				Text = (1000 / (SinceStart.TotalMilliseconds - LastDraw.TotalMilliseconds)).ToString();
+				Text = Text.Substring(0, 5);
+				LastUpdate = new TimeSpan();
+			}
+			
+			LastDraw = SinceStart;
+
+
+			batch.Begin();
+			Vector2 FontOrigin = Font.MeasureString( Text ) / 2;
+			// Draw the string
+			batch.DrawString( Font, Text, GetAbsolutePosition(), Tint * Alpha, 
+			                 Orientation, OriginRelative * Font.MeasureString(Text), Scale, Effects, 0 );
+			batch.End();
 		}
     }
 }
